--- a/css/stylesPage.css
+++ b/css/stylesPage.css
@@ -2742,18 +2742,14 @@ P.has-drop-cap:after {
 }
 
 .jackrose-sow-quote .flickity-slider {
-    transform: none !important
+    transform: none !important;
+    display: flex;
+    align-items: center;
 }
 
 .jackrose-sow-quote-item {
     width: 100%;
-    height: 100% !important;
-    left: 0;
     left: 0 !important;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     opacity: 0;
     transition: opacity .5s ease-in-out;
     backface-visibility: hidden;
